Generate forge interfaces via code generation